timo_frontend/app/styles/app.scss
@import "ember-power-select";
@import "ember-modal-dialog/ember-modal-structure";
@import "ember-modal-dialog/ember-modal-appearance";

@import './variables.scss';
@import './components/timezone-list.scss';
@import './components/team-header.scss';
@import './components/sidenavbar.scss';
@import './components/t-input.scss';
@import './components/t-modal.scss';
@import './components/t-checkbox.scss';
@import './components/t-button.scss';
@import './components/email-verification.scss';
@import './components/add-member-modal.scss';
@import './components/share-team.scss';
@import './components/about-team-modal.scss';
@import './components/member-list.scss';
@import './components/shared-team-header.scss';
@import './components/not-found.scss';
@import './components/header-tooltip.scss';
@import './components/main-footer.scss';

@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');

@import "./media-query.scss";

html, .ember-application {
  height: 100%;
}

body {
  font-family: 'Poppins', sans-serif;
  background: #F3F2F9;
  margin: 0;
  min-height: 100%;
}

button {
  cursor: pointer;
}

.landing {
  height: 100%;
  display: flex;
}

.shared-page {
  display:flex;
  flex-direction: column;
  height: 100%;
}

.side-content {
  width: calc(100% - 215px);
  display: flex;
  flex-direction: column;

  @include mobile {
    width: 100%;
  }
}

.landing-image {
  height: 350px;
  width: 350px;
  align-self: center;
}

.login-page, .sign-up-page {
  min-height: calc(100% - 7px);
  background: #F0F0F7;
  display: flex;
  border-bottom: 7px solid #CED4EA;

  @media (max-width: 1179px) {
    border-bottom: none;
    height: 100%;
  }

  @include mobile {
    height: max-content;
  }

  &__form-container {
    align-items: center;
    background: white;
    width: 50%;
    padding: 80px 110px 0;
    display: flex;
    flex-direction: column;

    @media (max-width: 1120px) {
      padding: 60px 25px 0;
      width: 100%;
    }

    @media (min-width: 1720px) {
      padding-top: 160px;
    }

    @include mobile {
      width: 100%;
      padding: 60px 25px 0;
    }
  }

  &__image-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;

    @media (max-width: 1120px) {
      display: none;
    }
  }

  &__title {
    font-size: 33px;
    text-align: center;
    letter-spacing: 0px;
    color: $dark-blue;
    opacity: 0.61;
    font-weight: bold;
    padding: 60px 125px 0;
    margin: 0;

    @include mobile {
      margin-top: 16px;
    }

    @media (min-width: 1720px) {
      padding-top: 120px;
    }
  }

  &__form-title {
    text-align: center;
    font-weight: bold;
    font-size: 25px;
    color: $dark-blue;
    margin-top: 26px;
  }

  &__form-description {
    width: max-content;
    text-align: center;
    font-weight: bold;
    font-size: 15px;
    color: $dark-blue;
    margin-bottom: 64px;

    @include mobile {
      font-size: 13px;
      margin-top: 16px;
      margin-bottom: 32px;
      width: fit-content;
    }
  }

  &__form-button {
    margin-left: auto;
    margin-right: auto;
    padding: 9px 75px;
  }

  &__input {
    width: 100%;
    margin-bottom: 45px;
  }

  &__sign-up-label, &__login-label {
    font-size: 14px;
    color: $green;
    margin-top: 13px;
    text-decoration: none;
  }

  &__image {
    width: 578px;
    height: 411px;
    min-width: 378px;
    min-height: 211px;

    @media (min-width: 1520px) {
      width: 778px;
      height: 611px;
      min-width: 578px;
      min-height: 411px;
    }
  }

  &__form-actions {
    width: 100%;
    align-items: center;
    position: relative;
    display: flex;
    flex-direction: column;
  }
}

.response-error {
  top: -20px;
  position: absolute;
  color: $timo-warning;
  font-size: 12px;
}

.ember-modal-overlay.translucent {
  background-color: rgba(black, .64);
  outline: none;
}

.avatar {
  border-radius: 50%;
  background-color: $green;
  display: inline-flex;
  justify-content: center;
  align-items: center;
}

.no-team {
  margin: auto;
  display: flex;
  flex-direction: column;
  align-items: center;

  .t-button {
    padding: 9px 25px;

    @include mobile {
      padding: 12px 24px;
      font-size: 17px;
    }
  }

  &__label {
    text-align: center;
    margin-top: 30px;
    margin-bottom: 22px;
    font-size: 25px;
    font-weight: bold;

    @include mobile {
      font-size: 22px;
    }
  }

  @include mobile {
    >:last-child {
      margin-top: 16px;
    }
  }
}

.showing-tooltip {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(black, .64);
  z-index: 5;
  overflow: hidden;
}

.showing-mobile-sidenav-bar {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(black, .64);
  z-index: 15;
  overflow: hidden;
}

.t-form {
  width: 100%;

  @include mobile {
    flex-direction: column;
    display: flex
  }
}

.wrap-ellipsis {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

